# ocplib-simplex

./: .git-blame-ignore-revs  .gitignore  .ocplint  CHANGES.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.in  README.md  configure.in  dune-project  index.html  ocplib-simplex.opam  ocplib-simplex.opam.locked  opam
.github/workflows/: build.yml  documentation.yml
extra/: TODO.txt  pre-commit--git-hook  simplex_invariants.txt
extra/opam-files/: url
ocplib-simplex/: index.html
ocplib-simplex/OcplibSimplex/: index.html
ocplib-simplex/OcplibSimplex/AssertBounds/: index.html
ocplib-simplex/OcplibSimplex/AssertBounds/Make/: index.html
ocplib-simplex/OcplibSimplex/AssertBounds/Make/argument-1-Core/: index.html
ocplib-simplex/OcplibSimplex/AssertBounds/module-type-S/: index.html
ocplib-simplex/OcplibSimplex/AssertBounds/module-type-S/Core/: index.html
ocplib-simplex/OcplibSimplex/Basic/: index.html
ocplib-simplex/OcplibSimplex/Basic/Make/: index.html
ocplib-simplex/OcplibSimplex/Basic/Make/Assert/: index.html
ocplib-simplex/OcplibSimplex/Basic/Make/Core/: index.html
ocplib-simplex/OcplibSimplex/Basic/Make/Result/: index.html
ocplib-simplex/OcplibSimplex/Basic/Make/Solve/: index.html
ocplib-simplex/OcplibSimplex/Basic/Make/argument-1-Var/: index.html
ocplib-simplex/OcplibSimplex/Basic/Make/argument-2-R/: index.html
ocplib-simplex/OcplibSimplex/Basic/Make/argument-3-Ex/: index.html
ocplib-simplex/OcplibSimplex/Core/: index.html
ocplib-simplex/OcplibSimplex/Core/Make/: index.html
ocplib-simplex/OcplibSimplex/Core/Make/MX/: index.html
ocplib-simplex/OcplibSimplex/Core/Make/P/: index.html
ocplib-simplex/OcplibSimplex/Core/Make/R/: index.html
ocplib-simplex/OcplibSimplex/Core/Make/R2/: index.html
ocplib-simplex/OcplibSimplex/Core/Make/SX/: index.html
ocplib-simplex/OcplibSimplex/Core/Make/V/: index.html
ocplib-simplex/OcplibSimplex/Core/Make/argument-1-Var/: index.html
ocplib-simplex/OcplibSimplex/Core/Make/argument-2-R/: index.html
ocplib-simplex/OcplibSimplex/Core/Make/argument-3-Ex/: index.html
ocplib-simplex/OcplibSimplex/Core/MakeExpert/: index.html
ocplib-simplex/OcplibSimplex/Core/MakeExpert/R2/: index.html
ocplib-simplex/OcplibSimplex/Core/MakeExpert/argument-1-Var/: index.html
ocplib-simplex/OcplibSimplex/Core/MakeExpert/argument-2-R/: index.html
ocplib-simplex/OcplibSimplex/Core/MakeExpert/argument-3-V/: index.html
ocplib-simplex/OcplibSimplex/Core/MakeExpert/argument-4-Ex/: index.html
ocplib-simplex/OcplibSimplex/Core/MakeExpert/argument-5-R2/: index.html
ocplib-simplex/OcplibSimplex/Core/MakeExpert/argument-6-P/: index.html
ocplib-simplex/OcplibSimplex/Core/MakeExpert/argument-7-MX/: index.html
ocplib-simplex/OcplibSimplex/Core/MakeExpert/argument-8-SX/: index.html
ocplib-simplex/OcplibSimplex/CoreSig/: index.html
ocplib-simplex/OcplibSimplex/CoreSig/module-type-S/: index.html
ocplib-simplex/OcplibSimplex/CoreSig/module-type-S/Ex/: index.html
ocplib-simplex/OcplibSimplex/CoreSig/module-type-S/MX/: index.html
ocplib-simplex/OcplibSimplex/CoreSig/module-type-S/P/: index.html
ocplib-simplex/OcplibSimplex/CoreSig/module-type-S/R/: index.html
ocplib-simplex/OcplibSimplex/CoreSig/module-type-S/R2/: index.html
ocplib-simplex/OcplibSimplex/CoreSig/module-type-S/SX/: index.html
ocplib-simplex/OcplibSimplex/CoreSig/module-type-S/V/: index.html
ocplib-simplex/OcplibSimplex/CoreSig/module-type-S/Var/: index.html
ocplib-simplex/OcplibSimplex/ExtSigs/: index.html
ocplib-simplex/OcplibSimplex/ExtSigs/module-type-Coefs/: index.html
ocplib-simplex/OcplibSimplex/ExtSigs/module-type-Explanations/: index.html
ocplib-simplex/OcplibSimplex/ExtSigs/module-type-MapSig/: index.html
ocplib-simplex/OcplibSimplex/ExtSigs/module-type-Rationals/: index.html
ocplib-simplex/OcplibSimplex/ExtSigs/module-type-SetSig/: index.html
ocplib-simplex/OcplibSimplex/ExtSigs/module-type-Value/: index.html
ocplib-simplex/OcplibSimplex/ExtSigs/module-type-Variables/: index.html
ocplib-simplex/OcplibSimplex/Polys/: index.html
ocplib-simplex/OcplibSimplex/Polys/Make/: index.html
ocplib-simplex/OcplibSimplex/Polys/Make/argument-1-Var/: index.html
ocplib-simplex/OcplibSimplex/Polys/Make/argument-2-R/: index.html
ocplib-simplex/OcplibSimplex/Polys/module-type-SIG/: index.html
ocplib-simplex/OcplibSimplex/Rat2/: index.html
ocplib-simplex/OcplibSimplex/Rat2/Make/: index.html
ocplib-simplex/OcplibSimplex/Rat2/module-type-SIG/: index.html
ocplib-simplex/OcplibSimplex/Result/: index.html
ocplib-simplex/OcplibSimplex/Result/Make/: index.html
ocplib-simplex/OcplibSimplex/Result/module-type-S/: index.html
ocplib-simplex/OcplibSimplex/SolveBounds/: index.html
ocplib-simplex/OcplibSimplex/SolveBounds/Make/: index.html
ocplib-simplex/OcplibSimplex/SolveBounds/module-type-S/: index.html
ocplib-simplex/OcplibSimplex/Version/: index.html
src/: assertBounds.ml  assertBounds.mli  basic.ml  basic.mli  build.ocp  core.ml  core.mli  coreSig.mli  dune  extSigs.mli  logs.ml  logs.mli  polys.ml  polys.mli  rat2.ml  rat2.mli  result.ml  result.mli  solveBounds.ml  solveBounds.mli  version.ml  version.mli
tests/: dune  ex.ml  instantiateBasicFunctor.ml  main.expected  main.ml  rat.ml  simplex.ml  solveEmpty.expected  solveEmpty.ml  standalone_minimal.expected  standalone_minimal.ml  standalone_minimal_maximization.expected  standalone_minimal_maximization.ml  standalone_test_strict_bounds.expected  standalone_test_strict_bounds.ml  var.ml
(+64 files in other folders)
